fix(local-nav): hide overflow when collapsed

--- a/src/components/global/localNav/localNav.scss
+++ b/src/components/global/localNav/localNav.scss
@@ -80,7 +80,7 @@ nav {
   list-style: none;
   padding: 0 8px;
   margin: 0;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
   position: absolute;
   top: 100%;
@@ -98,6 +98,8 @@ nav {
   }
 
   .nav--expanded & {
+    overflow-y: auto;
+
     @media (min-width: 42rem) {
       height: 100%;
     }
